--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <label>Enter URL:</label>
-    <input type="text" id="input-el" placeholder="https://google.com" />
-    <button id="input-btn">SAVE INPUT</button>
-    <button id="delete-btn">DELETE ALL</button>
-    <ul id="ul-el"></ul>
-    <script type="module" src="index.js"></script>
+    <div id="container">
+      <label>Enter URL:</label>
+      <input type="text" id="input-el" placeholder="https://google.com" />
+      <button id="input-btn">SAVE INPUT</button>
+      <button id="delete-btn">DELETE ALL</button>
+      <ul id="ul-el"></ul>
+      <script type="module" src="index.js"></script>
+    </div>
   </body>
 </html>
